<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:background="@drawable/background"
        android:paddingHorizontal="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/photo"
            android:textAllCaps="false"
            android:letterSpacing="0.15"
            android:fontFamily="@font/comfortaabold"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:drawablePadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/logo" />

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_photo"
                android:contentDescription="@string/profile_picture_photo_desc" />

            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/pawel_czerwinski"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/pawel_user_name"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_height="105dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:text="@string/log_in"
            android:layout_weight="1"
            android:background="@drawable/login_btn"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginEnd="9dp"
            android:layout_height="52dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@drawable/register_btn"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_height="52dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>