<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:onClick="onBackButtonClick"
        android:layout_height="24dp"
        android:clickable="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/back_arrow"
        android:focusable="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:layout_marginTop="32.65dp"
        android:text="@string/log_in"
        android:fontFamily="@font/comfortaasemibold"
        android:textAllCaps="false"/>
    
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:padding="14dp"
        android:hint="@string/email_hint"
        android:background="@drawable/login_btn"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="52dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPass"
        android:inputType="textPassword"
        android:layout_marginVertical="16dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:padding="14dp"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/password_hint"
        android:background="@drawable/login_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:background="@drawable/register_btn"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_height="52dp"/>
</LinearLayout>